--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>陕甘宁边区金融史</title>
-    <link rel="stylesheet" href=/static/plugins/bootstrap-3.4.1/css/bootstrap.css>
+    <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
 
     <style>
         .menus {
@@ -131,7 +131,7 @@
     </div>
 </div>
 
-<script src="/static/js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
+<script src="js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
 <script type="text/javascript">
     function clickMe(self) {
 
