--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>陕甘宁边区金融史</title>
+    <title>红色经济史学习与推广平台</title>
     <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
 
     <style>
