--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 </head>
 
 <body>
+<div id="upimg">
+    <img src="img/upimg.png" alt="陕甘宁">
+</div>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
