--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台</title>
     <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
+    <link rel="stylesheet" href=css/1.css>
 
     <style>
         .menus {
