--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         .hide {
             display: none;
         }
+        .navbar-custom {
+        background-image: url('img/body.png');
+        background-size: cover; /* 让图片铺满整个导航栏 */
+        background-repeat: no-repeat; /* 防止图片重复 */
+        }
     </style>
 
 </head>
@@ -36,7 +41,7 @@
 <div id="upimg">
     <img src="img/upimg.png" alt="陕甘宁">
 </div>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-custom">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
