--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }    
     .menus {
         width: 150px;
-        height: 1000px;
+        height: calc(250px + 100vh);
         border: 5px solid black;
         font-size: 18px;
         color: #000;
@@ -43,9 +43,9 @@
             margin: 0px auto;
             position: absolute;
             bottom: 0;
-            left: calc(100% - 1200px); 
-            width: calc(100% - 300px);
-            height: 1000px;
+            left: calc(100% - 82.5%); 
+            width: calc(100% - 20%);
+            height: calc(250px + 100vh);
         }
         #main #jieshao {
             position: relative;
