--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     #main {
             padding: 25px 35px;
             background: #FFF;
-            border: 4px #b6b3ac solid;
-            border-top: #beb7ae 7px solid;
+            border: 1px #b6b3ac solid;
+            border-top: #beb7ae 1px solid;
             margin: 0px auto;
             position: absolute;
             bottom: 0;
@@ -66,7 +66,7 @@
             text-align: right;
         }
     .navbar-custom {
-    background-image: url('img/body.png');
+    background-image: url('img/body4.png');
     background-size: cover; /* 让图片铺满整个导航栏 */
     background-repeat: no-repeat; /* 防止图片重复 */
     }
@@ -74,21 +74,57 @@
 </head>
 
 <body>
+<div id="upimg">
+    <img src="img/upimg.png" alt="陕甘宁">
+</div>
+
 
 
 <nav class="navbar navbar-default navbar-custom">
-    <div id="head"></div>
     <div class="menus">
         <div class="item">
-            <div class="header" onclick="clickMe(this);">首页</div>
+            <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">参考书目</div>
+            <div class="header" onclick="clickMe(this);">财政</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">数据库</div>
+            <div class="header" onclick="clickMe(this);">人口</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">税收</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">对外经济贸易</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">农业</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">工业</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">其他</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">参考文献</div>
+            <div class="content hide">
+                <a href="陕甘宁 - cksm1.html">详细（1）</a>
+                <a href="陕甘宁 - cksm2.html">详细（2）</a>
+            </div>
+        </div>
+    </div>
+<!--         
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">其他</div>
             <div class="content hide">
                 <a href="#">财政</a>
                 <a href="#">人口</a>
@@ -99,7 +135,7 @@
                 <a href="#">其他</a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="main">
         <div id="jieshao">
@@ -117,7 +153,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在《红色经济史学习与推广平台》中，所有数据均来源于所列参考文献，由杨昊锟同学、宋润石同学、姜威宇同学、汪隆俊同学、向磊同学摘录，由王璨璨同学、张佳彦同学、朱逸然同学、王浩哲同学、王卓同学整理，由余许多同学、李皓同学校对，由毛杰老师、陆甦颖老师、叶鹏老师、魏峭巍老师、冯玉鑫老师复核和指导，并由毛杰老师总校。囿于时间仓促，加之编者水平有限，《红色经济史学习与推广平台》仅对已收集到的资料进行了整理编辑，未能多方请教，挂一漏万在所难免，恳请各位专家学者和广大热心读者批评指正。
             </p>
             <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;吴起镇的隆隆炮声早已远去，光华商店的代价券早已褪色，宝塔山下的座座窑洞也已斑驳，但以中国共产党为领导主体的红色经济史，不仅载在史册中，更深深印刻在广大群众的心里。&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;吴起镇的隆隆炮声业已远去，光华商店的代价券早已褪色，宝塔山下的座座窑洞也已斑驳，但以中国共产党为领导主体的红色经济史，不仅载在史册中，更深深印刻在广大群众的心里。&nbsp;
             </p>
             <p class="right-aligned-text">
                 编者&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
