--- a/陕甘宁 - cksm1.html
+++ b/陕甘宁 - cksm1.html
@@ -74,13 +74,12 @@
 </head>
 
 <body>
-<div id="upimg">
-    <img src="img/upimg.png" alt="陕甘宁">
-</div>
 
 
 
 <nav class="navbar navbar-default navbar-custom">
+    <div class="head"></div>
+    
     <div class="menus">
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
