--- a/陕甘宁 - cksm2.html
+++ b/陕甘宁 - cksm2.html
@@ -78,8 +78,8 @@ background-repeat: no-repeat; /* 防止图片重复 */
 
 
 <nav class="navbar navbar-default navbar-custom">
-    <div class="head"></div>
-    
+    <div id="head"></div>
+
     <div class="menus">
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
