--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <body>
 
 <nav class="navbar navbar-default navbar-custom">
-    <div class="head"></div>
-    
+    <div id="head"></div>
+
     <div class="menus">
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
