--- a/陕甘宁 - cksm2.html
+++ b/陕甘宁 - cksm2.html
@@ -67,7 +67,7 @@
         text-align: right;
     }
 .navbar-custom {
-background-image: url('img/body4.png');
+background-image: url('img/body.png');
 background-size: cover; /* 让图片铺满整个导航栏 */
 background-repeat: no-repeat; /* 防止图片重复 */
 }
