--- a/陕甘宁 - ckwx.html
+++ b/陕甘宁 - ckwx.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台.参考书目</title>
     <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
+    <link rel="stylesheet" href=css/1.css>
 <style>
-    #head {
-            height: 250px;
-            background: url(img/upimg.png);
-            margin: 0px auto;
-            position: relative;
-        }    
     .menus {
-        width: 150px;
-        height: calc(250px + 100vh);
+        width: 200px;
+        height: 1500px;
         border: 5px solid black;
         font-size: 18px;
         color: #000;
@@ -38,14 +33,14 @@
     #main {
             padding: 25px 35px;
             background: #FFF;
-            border: 1px #b6b3ac solid;
-            border-top: #beb7ae 1px solid;
+            border: 4px #b6b3ac solid;
+            border-top: #beb7ae 7px solid;
             margin: 0px auto;
             position: absolute;
             bottom: 0;
-            left: calc(100% - 82.5%); 
-            width: calc(100% - 20%);
-            height: calc(250px + 100vh);
+            left: calc(100% - 1150px); 
+            width: calc(100% - 300px);
+            height: 1500px;
         }
         #main #jieshao {
             position: relative;
@@ -59,65 +54,109 @@
         #main #jieshao p {
             line-height: 28px;
             font-size: 14px;
-            padding: 15px 0px;;
+            padding: 0px 0px;;
         }
-        .right-aligned-text {
-            white-space: pre-wrap;
-            text-align: right;
-        }
-    .navbar-custom {
-    background-image: url('img/body.png');
-    background-size: cover; /* 让图片铺满整个导航栏 */
-    background-repeat: no-repeat; /* 防止图片重复 */
-    }
+    
+    
 </style>
 </head>
 
 <body>
+<div id="upimg">
+    <img src="img/upimg.png" alt="陕甘宁">
+</div>
 
 
 
 <nav class="navbar navbar-default navbar-custom">
-    <div id="head"></div>
-
     <div class="menus">
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">财政</div>
+            <div class="header" onclick="clickMe(this);">一、行政区划</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">人口</div>
+            <div class="header" onclick="clickMe(this);">二、人口</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">税收</div>
+            <div class="header" onclick="clickMe(this);">三、就业与工资</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">对外经济贸易</div>
+            <div class="header" onclick="clickMe(this);">四、价格</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">农业</div>
+            <div class="header" onclick="clickMe(this);">五。人民生活</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">工业</div>
+            <div class="header" onclick="clickMe(this);">六、财政</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">其他</div>
+            <div class="header" onclick="clickMe(this);">七、税收</div>
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);">参考文献</div>
-            <div class="content hide">
-            <a href="陕甘宁 - cksm1.html">详细（1）</a>
-            <a href="陕甘宁 - cksm2.html">详细（2）</a>
+            <div class="header" onclick="clickMe(this);">八、自然灾害</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">九、对外经济贸易</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十、农业</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十一、工业</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十二、商业</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十三、运输业</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十四、合作社</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十五、金融业</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十六、教育</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十七、医疗</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十八、文化与体育</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">十九、公共管理</div>
+        </div>
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);">二十、其他</div>
+        </div>
+
+
+        <div class="item">
+            <div class="header" onclick="clickMe(this);"><a href="陕甘宁 - ckwx.html">参考文献</a></div>
         </div>
     </div>
 <!--         
@@ -192,6 +231,52 @@
             <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【18】 魏协武：《黄亚光文稿和日记摘编》，西安，陕西人民出版社1999年版。&nbsp;
             </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【19】 魏协武：《陕甘宁边区金融报道史料选》，西安，陕西人民出版社1992年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【20】 魏协武：《陕甘宁革命根据地银行编年纪事》，北京，中国金融出版社1993年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【21】魏协武：《朱理治金融论稿》，北京，中国财政经济出版社1993年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【22】星光、张杨：《解放战争时期陕甘宁边区财政经济史资料选辑》，上册、下册，西安，三秦出版社1989年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【23】星光、张杨：《抗日战争时期陕甘宁边区财政经济史稿》，西安，西北大学出版社1988年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【24】许树信：《中国革命根据地货币史纲》，北京，中国金融出版社2008年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【25】杨伟宏、王保存：《解放战争时期陕甘宁边区金融史料摘编》，上册、下册，西安，西北大学出版社2018年版。&nbsp;
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【26】姚文琦、姬乃军：《西北革命根据地史》，西安：陕西人民出版社2014年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【27】姚文琦：《西北革命根据地回忆录精编》，第1至第5卷，西安：陕西人民出版社2014年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【28】姚文琦：《西北革命根据地文献资料精编》，第1至第2卷，西安：陕西人民出版社2014年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【29】张俊南、张宪臣、牛玉民：《陕甘宁边区大事记》，西安，三秦出版社1986年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【30】中国财政科学院：《抗日战争时期陕甘宁边区财政经济史料摘编》（重印本），第1至第9编，武汉，长江文艺出版社2016年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【31】中国人民银行：《<红色中华>金融史料摘编》，北京，中国金融出版社2016年版。&nbsp;
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【32】中国人民银行：《<新中华报>金融史料摘编》，北京，中国金融出版社2018年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【33】中央档案馆、陕西省档案馆编：《陕西革命历史文件汇集》，甲种第1至第18卷，西安，内部资料1991年版。&nbsp;
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【34】中央档案馆：《中共中央文件选集（1921-1949）》，第1至14册，北京，中共中央党校出版社1983、1989—1991年版。&nbsp;
+            <p>
         </div>
     </div>
 </nav>
