--- a/14.1.html
+++ b/14.1.html
@@ -71,13 +71,9 @@
 </head>
 
 <body>
-<div id="upimg">
-    <img src="img/upimg.png" alt="陕甘宁">
-</div>
-
-
 
 <nav class="navbar navbar-default navbar-custom">
+    <div id="head"></div>
     <div class="menus">
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
@@ -181,7 +177,7 @@
                 <a href="14.32.html">14.32 延安大学员生工业合作社统计(1944年1-3月)</a>
             </div>
         </div>
-        
+
         <div class="item">
             <div class="header" onclick="clickMe(this);">十五、金融业</div>
         </div>
