--- a/14.19.html
+++ b/14.19.html
@@ -71,17 +71,9 @@
 </head>
 
 <body>
-<div id="upimg">
-    <img src="img/upimg.png" alt="陕甘宁">
-</div>
-
-
 
 <nav class="navbar navbar-default navbar-custom">
-    <div class="menus">
-        <div class="item">
-            <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
-        </div>
+    <div id="head"></div>
 
         <div class="item">
             <div class="header" onclick="clickMe(this);">一、行政区划</div>
