--- a/14.27.html
+++ b/14.27.html
@@ -71,13 +71,9 @@
 </head>
 
 <body>
-<div id="upimg">
-    <img src="img/upimg.png" alt="陕甘宁">
-</div>
-
-
 
 <nav class="navbar navbar-default navbar-custom">
+    <div id="head"></div>
     <div class="menus">
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
