--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
 </head>
 
 <body>
-    <div id="upimg">
-        <img src="img/upimg.png" alt="陕甘宁">
-    </div>
-    
+
     <nav class="navbar navbar-default navbar-custom">
+        <div id="head"></div>
         <div class="menus">
             <div class="item">
                 <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>
