--- a/hzs/14.5.html
+++ b/hzs/14.5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>红色经济史学习与推广平台.参考书目</title>
+    <title>红色经济史学习与推广平台</title>
     <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
     <link rel="stylesheet" href=css/1.css>
     <style>
@@ -72,8 +72,8 @@
 
 <body>
 
-<nav class="navbar navbar-default navbar-custom">
-    <div id="head"></div>
+    <nav class="navbar navbar-default navbar-custom">
+        <div id="head"></div>
     <div class="menus">
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
@@ -85,6 +85,15 @@
 
         <div class="item">
             <div class="header" onclick="clickMe(this);">二、人口</div>
+            <div class="content hide">
+                <a href="#">财政</a>
+                <a href="#">人口</a>
+                <a href="#">税收</a>
+                <a href="#">对外经济贸易</a>
+                <a href="#">农业</a>
+                <a href="#">工业</a>
+                <a href="#">其他</a>
+            </div>
         </div>
 
         <div class="item">
@@ -167,7 +176,7 @@
                     <a href="hzs/14.31.html">14.31 延安南区合作社新合工厂合伙分红制度（1943年3月23日）</a>
                     <a href="hzs/14.32.html">14.32 延安大学员生工业合作社统计(1944年1-3月)</a>
                 </div>
-            </div>
+            </div>        
         <div class="item">
             <div class="header" onclick="clickMe(this);">十五、金融业</div>
         </div>
@@ -192,117 +201,13 @@
             <div class="header" onclick="clickMe(this);">二十、其他</div>
         </div>
 
-
         <div class="item">
             <div class="header" onclick="clickMe(this);"><a href="陕甘宁 - ckwx.html">参考文献</a></div>
         </div>
     </div>
 
-
     <div id="main">
-        <div id="jieshao">
-            <h1>参考文献</h1>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【1】《红色档案——延安时期文献档案汇编》编委会：《八路军军政杂志》（影印本），第1至第4卷，西安，陕西人民出版社2013年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【2】《红色档案——延安时期文献档案汇编》编委会：《共产党人》（影印本），第1至第2卷，西安，陕西人民出版社2013年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【3】《红色档案——延安时期文献档案汇编》编委会：《解放》（影印本），第1至第7卷，西安，陕西人民出版社2013年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【4】《红色档案——延安时期文献档案汇编》编委会：《陕甘宁边区参议会史料汇编》（影印本），上卷、下卷，西安，陕西人民出版社2013年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【5】《红色档案——延安时期文献档案汇编》编委会：《陕甘宁边区政府文件选编》（影印本），第1至第14卷，西安，陕西人民出版社2013年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【6】 财政部税务总局：《中国革命根据地工商税收史长编——陕甘宁边区部分》，北京，中国财政经济出版社1989年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【7】 甘肃省社会科学院历史研究室：《陕甘宁革命根据地史料选辑》，第1至第5辑，兰州，甘肃人民出版社1981、1985年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【8】 黄正林：《陕甘宁边区社会经济史  1937-1945》，北京：人民出版社2006年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【9】 李实：《陕甘宁革命根据地货币史》，北京，中国金融出版社2003年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【10】 商业部商业经济研究所：《革命根据地商业回忆录》，北京，中国商业出版社1984年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【11】陕甘宁边区财政经济史编写组：《抗日战争时期陕甘宁边区财政经济史料摘编》，第1至第9编，西安，陕西人民出版社1981年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【12】陕甘宁边区金融史编辑委员会：《陕甘宁边区金融史》，北京，中国金融出版社1992年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【13】陕甘宁革命根据地工商税收史编写组：《陕甘宁革命根据地工商税收史料选编》，第1至第10册，西安，陕西人民出版社1985—1988年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【14】陕西省工商行政管理局：《陕甘宁边区的工商行政管理》，北京，工商出版社1986年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【15】王保存、杨伟宏：《陕甘宁根据地土地革命时期财政经济史料》，西安，西北大学出版社2018年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【16】 王金昌、张晓东：《陕甘宁边区经济典藏》，北京，人民出版社2017年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【17】 魏协武：《边区银行风云录》，西安，陕西人民出版社1996年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【18】 魏协武：《黄亚光文稿和日记摘编》，西安，陕西人民出版社1999年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【19】 魏协武：《陕甘宁边区金融报道史料选》，西安，陕西人民出版社1992年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【20】 魏协武：《陕甘宁革命根据地银行编年纪事》，北京，中国金融出版社1993年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【21】魏协武：《朱理治金融论稿》，北京，中国财政经济出版社1993年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【22】星光、张杨：《解放战争时期陕甘宁边区财政经济史资料选辑》，上册、下册，西安，三秦出版社1989年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【23】星光、张杨：《抗日战争时期陕甘宁边区财政经济史稿》，西安，西北大学出版社1988年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【24】许树信：《中国革命根据地货币史纲》，北京，中国金融出版社2008年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【25】杨伟宏、王保存：《解放战争时期陕甘宁边区金融史料摘编》，上册、下册，西安，西北大学出版社2018年版。&nbsp;
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【26】姚文琦、姬乃军：《西北革命根据地史》，西安：陕西人民出版社2014年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【27】姚文琦：《西北革命根据地回忆录精编》，第1至第5卷，西安：陕西人民出版社2014年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【28】姚文琦：《西北革命根据地文献资料精编》，第1至第2卷，西安：陕西人民出版社2014年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【29】张俊南、张宪臣、牛玉民：《陕甘宁边区大事记》，西安，三秦出版社1986年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【30】中国财政科学院：《抗日战争时期陕甘宁边区财政经济史料摘编》（重印本），第1至第9编，武汉，长江文艺出版社2016年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【31】中国人民银行：《<红色中华>金融史料摘编》，北京，中国金融出版社2016年版。&nbsp;
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【32】中国人民银行：《<新中华报>金融史料摘编》，北京，中国金融出版社2018年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【33】中央档案馆、陕西省档案馆编：《陕西革命历史文件汇集》，甲种第1至第18卷，西安，内部资料1991年版。&nbsp;
-            </p>
-            <p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【34】中央档案馆：《中共中央文件选集（1921-1949）》，第1至14册，北京，中共中央党校出版社1983、1989—1991年版。&nbsp;
-            <p>
-        </div>
+            <img src="img/14.5.png" width="887.5" height="371.5" alt="陕甘宁">
     </div>
 </nav>
 
