--- a/hzs/14.13.html
+++ b/hzs/14.13.html
@@ -76,7 +76,7 @@
         <div id="head"></div>
     <div class="menus">
         <div class="item">
-            <div class="header" onclick="clickMe(this);"><a href="陕甘宁.html">首页</a></div>
+            <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>
         </div>
 
         <div class="item">
