--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <a href="hzs/14.21.html">14.21 分县市人民纺织生产合作社统计(1939年上半年)</a>
                     <a href="hzs/14.22.html">14.22 边区纺织工业合作社统计(1939年)</a>
                     <a href="hzs/14.23.html">14.23 米脂民办纺织生产合作社成品种类列表(1943年)</a>
-                    <a href="hzs/hzs/14.24.html">14.24 各分区边区运输合作社概况统计(1944年)</a>
+                    <a href="hzs/14.24.html">14.24 各分区边区运输合作社概况统计(1944年)</a>
                     <a href="hzs/14.25.html">14.25 分区域延安市运输合作社(队)概况统计(1943年)</a>
                     <a href="hzs/14.26.html">14.26 延安县“请会” “随会”情况调查统计</a>
                     <a href="hzs/14.27.html">14.27 延安县姚店19个“请会”成分用途调查统计</a>
