--- a/hzs/14.21.html
+++ b/hzs/14.21.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台</title>
-    <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
+   <link rel="stylesheet" href=redecohis/redecohis.github.io/plugins/bootstrap-3.4.1/css/bootstrap.css>trap-3.4.1/css/bootstrap.css>
     <link rel="stylesheet" href=css/1.css>
     <style>
         #head {
                 height: 250px;
-                background: url(img/upimg.png);
+                background: url(redecohis/redecohis.github.io/img/upimg.png);
                 margin: 0px auto;
                 position: relative;
             }    
@@ -76,7 +76,7 @@
     <div id="head"></div>
     <div class="menus">
         <div class="item">
-            <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>
+            <div class="header" onclick="clickMe(this);"><a href="redecohis/redecohis.github.io/index.html">首页</a></div>
         </div>
 
         <div class="item">
@@ -202,16 +202,16 @@
         </div>
 
         <div class="item">
-            <div class="header" onclick="clickMe(this);"><a href="陕甘宁 - ckwx.html">参考文献</a></div>
+            <div class="header" onclick="clickMe(this);"><a href="redecohis/redecohis.github.io/陕甘宁 - ckwx.html">参考文献</a></div>甘宁 - ckwx.html">参考文献</a></div>
         </div>
     </div>
 
     <div id="main">
-            <img src="img/14.21.png" width="887.5" height="371.5" alt="陕甘宁">
+            <img src="redecohis/redecohis.github.io/img/14.21.png" width="887.5" height="371.5" alt="陕甘宁">
     </div>
 </nav>
 
-<script src="js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
+<script src="redecohis/redecohis.github.io/js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
 <script type="text/javascript">
     function clickMe(self) {
 
