--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
 </nav>
 
-<script src="redecohis/redecohis.github.io/js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
+<script src="js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
 <script type="text/javascript">
     function clickMe(self) {
 
