--- a/14.11.html
+++ b/14.11.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台</title>
-   <link rel="stylesheet" href=redecohis/redecohis.github.io/plugins/bootstrap-3.4.1/css/bootstrap.css>trap-3.4.1/css/bootstrap.css>
+   <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>trap-3.4.1/css/bootstrap.css>
     <link rel="stylesheet" href=css/1.css>
     <style>
         #head {
                 height: 250px;
-                background: url(redecohis/redecohis.github.io/img/upimg.png);
+            background: url(img/upimg.png);
                 margin: 0px auto;
                 position: relative;
             }    
@@ -76,7 +76,7 @@
         <div id="head"></div>
     <div class="menus">
         <div class="item">
-            <div class="header" onclick="clickMe(this);"><a href="redecohis/redecohis.github.io/index.html">首页</a></div>
+                <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>
         </div>
 
         <div class="item">
@@ -140,41 +140,41 @@
             <div class="header" onclick="clickMe(this);">十三、运输业</div>
         </div>
 
-        <div class="item">
+            <div class="item">
                 <div class="header" onclick="clickMe(this);">十四、合作社</div>
                 <div class="content hide">
-                    <a href="hzs/14.1.html">14.1 边区合作社发展概况统计(1937年—1944年3月)</a>
-                    <a href="hzs/14.2.html">14.2 边区各分区合作社发展情况统计(1944年)</a>
-                    <a href="hzs/14.3.html">14.3 分县市边区合作社社数统计（1944年）</a>
-                    <a href="hzs/14.4.html">14.4 分类别边区合作社社数统计（1944年）</a>
-                    <a href="hzs/14.5.html">14.5 关中各县合作社概况统计(1943年—1944年7月)</a>
-                    <a href="hzs/14.6.html">14.6 关中各县合作社概况统计（1944年后季到1945年7月）</a>
-                    <a href="hzs/14.7.html">14.7 分社别绥德分区各县合作社数统计(1944年)</a>
-                    <a href="hzs/14.8.html">14.8 延川县合作社经营报表（1943年上半年）</a>
-                    <a href="hzs/14.9.html">14.9 边区消费合作社发展概况统计（1937—1942）</a>
-                    <a href="hzs/14.10.html">14.10 分区县边区消费合作社概况</a>
-                    <a href="hzs/14.11.html">14.11 直属市县各消费合作社业务概况统计(1940年-1941年)</a>
-                    <a href="hzs/14.12.html">14.12 边区优秀消费合作社业务概况举例(1941年)</a>
-                    <a href="hzs/14.13.html">14.13 合作社供给群众农具、收买主要土产举例(1943年)</a>
-                    <a href="hzs/14.14.html">14.14 合作社帮助群众婚丧及移难民举例(1943年)</a>
-                    <a href="hzs/14.15.html">14.15 边区手工业生产合作社发展概况统计（1939-1941）</a>
-                    <a href="hzs/14.16.html">14.16 生产合作社社员股金表(1938年)</a>
-                    <a href="hzs/14.17.html">14.17 主要手工业生产合作社生产概况(1943年)</a>
-                    <a href="hzs/14.18.html">14.18 主要手工业生产合作社生产概况(1945年7月)</a>
-                    <a href="hzs/14.19.html">14.19 “中国工合”延安事务所之边区合作社历年发展的概况表</a>
-                    <a href="hzs/14.20.html">14.20 延安事务所贷出资金统计(1940年)</a>
-                    <a href="hzs/14.21.html">14.21 分县市人民纺织生产合作社统计(1939年上半年)</a>
-                    <a href="hzs/14.22.html">14.22 边区纺织工业合作社统计(1939年)</a>
-                    <a href="hzs/14.23.html">14.23 米脂民办纺织生产合作社成品种类列表(1943年)</a>
-                    <a href="hzs/14.24.html">14.24 各分区边区运输合作社概况统计(1944年)</a>
-                    <a href="hzs/14.25.html">14.25 分区域延安市运输合作社(队)概况统计(1943年)</a>
-                    <a href="hzs/14.26.html">14.26 延安县“请会” “随会”情况调查统计</a>
-                    <a href="hzs/14.27.html">14.27 延安县姚店19个“请会”成分用途调查统计</a>
-                    <a href="hzs/14.28.html">14.28 综合性合作社(南区式合作社)分布统计(1943年)</a>
-                    <a href="hzs/14.29.html">14.29 延安县南区合作社及其分社业务状况统计(1943年)</a>
-                    <a href="hzs/14.30.html">14.30 延安县南区合作社及其分社生产业务状况统计(1943年)</a>
-                    <a href="hzs/14.31.html">14.31 延安南区合作社新合工厂合伙分红制度（1943年3月23日）</a>
-                    <a href="hzs/14.32.html">14.32 延安大学员生工业合作社统计(1944年1-3月)</a>
+                    <a href="14.1.html">14.1 边区合作社发展概况统计(1937年—1944年3月)</a>
+                    <a href="14.2.html">14.2 边区各分区合作社发展情况统计(1944年)</a>
+                    <a href="14.3.html">14.3 分县市边区合作社社数统计（1944年）</a>
+                    <a href="14.4.html">14.4 分类别边区合作社社数统计（1944年）</a>
+                    <a href="14.5.html">14.5 关中各县合作社概况统计(1943年—1944年7月)</a>
+                    <a href="14.6.html">14.6 关中各县合作社概况统计（1944年后季到1945年7月）</a>
+                    <a href="14.7.html">14.7 分社别绥德分区各县合作社数统计(1944年)</a>
+                    <a href="14.8.html">14.8 延川县合作社经营报表（1943年上半年）</a>
+                    <a href="14.9.html">14.9 边区消费合作社发展概况统计（1937—1942）</a>
+                    <a href="14.10.html">14.10 分区县边区消费合作社概况</a>
+                    <a href="14.11.html">14.11 直属市县各消费合作社业务概况统计(1940年-1941年)</a>
+                    <a href="14.12.html">14.12 边区优秀消费合作社业务概况举例(1941年)</a>
+                    <a href="14.13.html">14.13 合作社供给群众农具、收买主要土产举例(1943年)</a>
+                    <a href="14.14.html">14.14 合作社帮助群众婚丧及移难民举例(1943年)</a>
+                    <a href="14.15.html">14.15 边区手工业生产合作社发展概况统计（1939-1941）</a>
+                    <a href="14.16.html">14.16 生产合作社社员股金表(1938年)</a>
+                    <a href="14.17.html">14.17 主要手工业生产合作社生产概况(1943年)</a>
+                    <a href="14.18.html">14.18 主要手工业生产合作社生产概况(1945年7月)</a>
+                    <a href="14.19.html">14.19 “中国工合”延安事务所之边区合作社历年发展的概况表</a>
+                    <a href="14.20.html">14.20 延安事务所贷出资金统计(1940年)</a>
+                    <a href="14.21.html">14.21 分县市人民纺织生产合作社统计(1939年上半年)</a>
+                    <a href="14.22.html">14.22 边区纺织工业合作社统计(1939年)</a>
+                    <a href="14.23.html">14.23 米脂民办纺织生产合作社成品种类列表(1943年)</a>
+                    <a href="14.24.html">14.24 各分区边区运输合作社概况统计(1944年)</a>
+                    <a href="14.25.html">14.25 分区域延安市运输合作社(队)概况统计(1943年)</a>
+                    <a href="14.26.html">14.26 延安县“请会” “随会”情况调查统计</a>
+                    <a href="14.27.html">14.27 延安县姚店19个“请会”成分用途调查统计</a>
+                    <a href="14.28.html">14.28 综合性合作社(南区式合作社)分布统计(1943年)</a>
+                    <a href="14.29.html">14.29 延安县南区合作社及其分社业务状况统计(1943年)</a>
+                    <a href="14.30.html">14.30 延安县南区合作社及其分社生产业务状况统计(1943年)</a>
+                    <a href="14.31.html">14.31 延安南区合作社新合工厂合伙分红制度（1943年3月23日）</a>
+                    <a href="14.32.html">14.32 延安大学员生工业合作社统计(1944年1-3月)</a>
                 </div>
             </div>        <div class="item">
             <div class="header" onclick="clickMe(this);">十五、金融业</div>
@@ -206,7 +206,7 @@
     </div>
 
     <div id="main">
-            <img src="redecohis/redecohis.github.io/img/14.11.png" width="887.5" height="371.5" alt="陕甘宁">
+            <img src="img/14.11.png" width="887.5" height="371.5" alt="陕甘宁">
     </div>
 </nav>
 
