修改了错误页面

--- a/14.19.html
+++ b/14.19.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台</title>
-   <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
+   <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>trap-3.4.1/css/bootstrap.css>
     <link rel="stylesheet" href=css/1.css>
     <style>
         #head {
@@ -74,6 +74,10 @@
 
 <nav class="navbar navbar-default navbar-custom">
     <div id="head"></div>
+    <div class="menus">
+        <div class="item">
+                <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>
+        </div>
 
         <div class="item">
             <div class="header" onclick="clickMe(this);">一、行政区划</div>
@@ -172,7 +176,8 @@
                     <a href="14.31.html">14.31 延安南区合作社新合工厂合伙分红制度（1943年3月23日）</a>
                     <a href="14.32.html">14.32 延安大学员生工业合作社统计(1944年1-3月)</a>
                 </div>
-            </div>        <div class="item">
+            </div>        
+        <div class="item">
             <div class="header" onclick="clickMe(this);">十五、金融业</div>
         </div>
 
