--- a/14.20.html
+++ b/14.20.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台</title>
-   <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
+   <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>trap-3.4.1/css/bootstrap.css>
     <link rel="stylesheet" href=css/1.css>
     <style>
         #head {
@@ -76,7 +76,7 @@
     <div id="head"></div>
     <div class="menus">
         <div class="item">
-                <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>ub.io/index.html">首页</a></div>
+                <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>
         </div>
 
         <div class="item">
