--- a/14.25.html
+++ b/14.25.html
@@ -8,7 +8,7 @@
     <style>
         #head {
                 height: 250px;
-            background: url(img/upimg.png);
+                background: url(img/upimg.png);
                 margin: 0px auto;
                 position: relative;
             }    
@@ -76,7 +76,7 @@
     <div id="head"></div>
     <div class="menus">
         <div class="item">
-                <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>ub.io/index.html">首页</a></div>
+                <div class="header" onclick="clickMe(this);"><a href="index.html">首页</a></div>
         </div>
 
         <div class="item">
