--- a/14.1.html
+++ b/14.1.html
@@ -224,17 +224,17 @@
     </div>
 
     <div id="main">
-            <img src="img/14.1.png" width="887.5" height="371.5" alt="陕甘宁">
+            <img src="img/14.1.png" width="1039.68" height="485.76" alt="陕甘宁">
     </div>
 </nav>
 
-<ul class="links">
+<!--<ul class="links">
     <li style="padding:0;"><a href="https://museum.shu.edu.cn/" target="_blank"><img src="img/links1.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links2.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links3.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links4.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links5.jpg" width="178" height="43"></a></li>
-</ul>
+</ul>-->
 
 <script src="js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
 <script type="text/javascript">
