--- a/14.11.html
+++ b/14.11.html
@@ -193,7 +193,8 @@
                     <a href="14.31.html">14.31 延安南区合作社新合工厂合伙分红制度（1943年3月23日）</a>
                     <a href="14.32.html">14.32 延安大学员生工业合作社统计(1944年1-3月)</a>
                 </div>
-            </div>        <div class="item">
+            </div>        
+        <div class="item">
             <div class="header" onclick="clickMe(this);">十五、金融业</div>
         </div>
 
@@ -227,13 +228,13 @@
     </div>
 </nav>
 
-<ul class="links">
+<!--<ul class="links">
     <li style="padding:0;"><a href="https://museum.shu.edu.cn/" target="_blank"><img src="img/links1.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links2.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links3.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links4.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links5.jpg" width="178" height="43"></a></li>
-</ul>
+</ul>-->
 
 <script src="js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
 <script type="text/javascript">
