--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
         </div>
     </div>
 </nav>
-<ul class="links">
+<!--<ul class="links">
     <li style="padding:0;"><a href="https://museum.shu.edu.cn/" target="_blank"><img src="img/links1.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links2.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links3.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links4.jpg" width="178" height="43"></a></li>
     <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links5.jpg" width="178" height="43"></a></li>
-</ul>
+</ul>-->
 
 
 <script src="js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
