--- a/14.19.html
+++ b/14.19.html
@@ -40,15 +40,15 @@
     }
 
     #main {
+            text-align: center;
+            position: absolute;
             padding: 25px 35px;
             background: #FFF;
             border: 1px #b6b3ac solid;
             border-top: #beb7ae 1px solid;
-            margin: 0px auto;
-            position: absolute;
-            bottom: 0;
-            left: calc(100% - 1150px); 
-            width: calc(100% - 300px);
+            top: 250px;
+            left: calc(100% - 82.5%); 
+            width: calc(100% - 20%);
             height: 1000px;
         }
         #main #jieshao {
