--- a/14.2.html
+++ b/14.2.html
@@ -40,6 +40,7 @@
     }
 
     #main {
+        text-align: center;
             padding: 25px 35px;
             background: #FFF;
             border: 1px #b6b3ac solid;
