--- a/5.1.html
+++ b/5.1.html
@@ -42,6 +42,7 @@
     }
 
     #main {
+        text-align: center;
             position: absolute;
             padding: 25px 35px;
             background: #FFF;
