--- a/6.1.html
+++ b/6.1.html
@@ -156,7 +156,7 @@
                     <div class="header" onclick="clickMe(this);">六、财政</div>
                         <div class="content ">
                             <div class="twoheader">
-                                <a href="6.1.html">6.1财政收支概况（1944年）</a>
+                                <a href="6.1.html">6.1财政概算收支比较表</a>
                             </div>
                         </div>
                 </div>
@@ -294,13 +294,13 @@
                 </div>
 
                 <div class="item">
-                    <div class="header" onclick="clickMe(this);">联系我们：13985313702</div>
+                    <div class="header" onclick="clickMe(this);">联系我们：</div>
                 </div>
             </div>
         </div>
 
     <div id="main">
-            <img src="img/6.1.png" width="1033" height="637" alt="陕甘宁">
+            <img src="img/6.1.png" width="607.6" height="892.4" alt="陕甘宁">
     </div>
 </nav>
 
