--- a/14.19.html
+++ b/14.19.html
@@ -154,7 +154,7 @@
                 <div class="header" onclick="clickMe(this);">六、财政</div>
                     <div class="content hide">
                         <div class="twoheader">
-                            <a href="6.1.html">6.1财政收支概况（1944年）</a>
+                            <a href="6.1.html">6.1财政概算收支比较表</a>
                         </div>
                     </div>
             </div>
@@ -292,7 +292,7 @@
             </div>
 
             <div class="item">
-                <div class="header" onclick="clickMe(this);">联系我们：13985313702</div>
+                <div class="header" onclick="clickMe(this);">联系我们：</div>
             </div>
         </div>
     </div>
