--- a/4.4.html
+++ b/4.4.html
@@ -123,7 +123,7 @@
     
             <div class="item">
                 <div class="header" onclick="clickMe(this);">三、就业与工资</div>
-                    <div class="content">
+                    <div class="content hide">
                         <div class="twoheader">
                             <a href="3.1.html">3.1西北贸易公司农民银行工作人员统计表(1948年12月)</a>
                             <a href="3.2.html">3.2光华印刷厂职员工资表（1948年）</a>
