--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
             background: url(img/upimg.png);
         }    
     .menus {
-        position: relative;
-        width: 15%;
-        min-height: 1000px;
-        border: 5px solid black;
+        width: 200px;
+        height: 1000px;
         font-size: 18px;
         color: #000;
-        bottom: 0;
-        left: 0px;
     }
     .menus .header {
         padding: 6px 1px;
