--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台</title>
-   <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
-   <style>
+    <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
+<style>
     #head {
             position: relative;
             width: 100%;
@@ -81,12 +81,13 @@
         display: flex; 
         justify-content: space-around; 
     }
-    .links li {
-        float: left;
-        padding: 0 16px 0 0;
-        display: block;
+    #footer {
+    background: #49402f;
+    text-align: center;
+    color: #cec4ba;
+    padding: 13px 0px;
     }
-    </style>
+</style>
 </head>
 
 <body>
