--- a/14.25.html
+++ b/14.25.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>红色经济史学习与推广平台</title>
-   <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
+    <link rel="stylesheet" href=plugins/bootstrap-3.4.1/css/bootstrap.css>
     <link rel="stylesheet" href=css/1.css>
-    <style>
+<style>
     #head {
         height: 250px;
         background: url(img/upimg.png);
@@ -84,12 +84,13 @@
         display: flex; 
         justify-content: space-around; 
     }
-    .links li {
-        float: left;
-        padding: 0 16px 0 0;
-        display: block;
+    #footer {
+    background: #49402f;
+    text-align: center;
+    color: #cec4ba;
+    padding: 13px 0px;
     }
-    </style>
+</style>
 </head>
 
 <body>
