--- a/9.4.html
+++ b/9.4.html
@@ -83,10 +83,11 @@
         display: flex; 
         justify-content: space-around; 
     }
-    .links li {
-        float: left;
-        padding: 0 16px 0 0;
-        display: block;
+    #footer {
+    background: #49402f;
+    text-align: center;
+    color: #cec4ba;
+    padding: 13px 0px;
     }
 </style>
 </head>
