--- a/14.29.html
+++ b/14.29.html
@@ -309,13 +309,9 @@
     </div>
 </nav>
 
-<!--<ul class="links">
-    <li style="padding:0;"><a href="https://museum.shu.edu.cn/" target="_blank"><img src="img/links1.jpg" width="178" height="43"></a></li>
-    <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links2.jpg" width="178" height="43"></a></li>
-    <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links3.jpg" width="178" height="43"></a></li>
-    <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links4.jpg" width="178" height="43"></a></li>
-    <li style="padding:0;"><a href="https://www.shanghaimuseum.net" target="_blank"><img src="img/links5.jpg" width="178" height="43"></a></li>
-</ul>-->
+<div id="footer">
+    <p>合作单位 | 上海大学博物馆 上海红色文化研究院</p>
+</div>
 
 <script src="js/jquery-3.7.1.min/jquery-3.7.1.min.js"></script>
 <script type="text/javascript">
